# DelaDect

./: .gitignore  .readthedocs.yaml  README.md  docs_summary.txt  environment.yml  manuscript.tex  pyproject.toml  render_animations.py  setup.py
.memsearch/memory/: 2026-06-23.md
aux_scripts/shift_correction/: README.md  shift_correction.py
deladect/: __init__.py  delamination.py  detection.py  utils.py
docs/: .readthedocs.yaml  README.md
docs/source/: Image_pre_processing.rst  conf.py  delamination.rst  detection.rst  diffuse_delamination.rst  edge_delamination.rst  image_handling.rst  image_operations.rst  index.rst  methodology.rst  parameter_list.rst  parameter_truth_table.rst  results_storage.rst  shift_correction.rst  utils.rst
docs/source/_static/: custom.css
docs/source/examples/: advanced_options.rst  crack_detection.rst  delamination_multi_interface.rst  getting_started.rst  save_reload_results.rst  shift_correction.rst
example_images/sample-2/: experimental_data.csv
examples/: 01_getting_started.py  02_advanced_options.py  03_multi_interface_delamination.py  04_save_reload_results.py  make_connected_edge_limitation_figure.py
notebooks/: getting_started.ipynb  interactive_parameter_exploration.ipynb  orientation_warning_demo.ipynb
src/deladect/: __init__.py  specimen.py  utils.py
src/deladect/cli/: __init__.py  shift_correction.py
src/deladect/detection/: __init__.py  crack_detection.py  crack_tracking.py  delamination.py
src/deladect/io/: __init__.py  bundles.py  cracks.py  delamination.py  specimen_io.py
tests/: test_DelaDect_crack_detection.py  test_crack_analysis.py  test_crack_tracking.py  test_delamination_crack_inputs.py  test_specimen_persistence_and_paths.py
tests/test_results/test_run_20250919_105520/00_test_report/: test_summary.md
tests/test_results/test_run_20250919_105520/01_basic_functionality/: crack_density_results.csv  crack_density_results_with_strain.csv  detected_cracks.pkl
tests/test_results/test_run_20250919_105520/02_crossply_analysis/: cracks_0.pkl  cracks_90.pkl  filtered_cracks_90.pkl
tests/test_results/test_run_20250919_105520/04_postprocessing/: filtered_cracks_threshold_1.pkl  filtered_cracks_threshold_3.pkl
tests/test_results/test_run_20250919_105520/04_postprocessing/spacing_results_threshold_1.csv/: crack_spacing_data.csv
tests/test_results/test_run_20250919_105520/04_postprocessing/spacing_results_threshold_2.csv/: crack_spacing_data.csv
tests/test_results/test_run_20250919_105520/04_postprocessing/spacing_results_threshold_3.csv/: crack_spacing_data.csv
