[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deladect"
version = "1.0.1"
description = "Crack and delamination detection for translucent fiber-reinforced composites."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Vasco D.C. Pires" }]
requires-python = ">=3.9"
dependencies = [
    "numpy==1.23.5",
    "scipy==1.10.0",
    "pandas==1.3.5",
    "matplotlib==3.7.5",
    "scikit-image==0.18.1",
    "Pillow==8.4.0",
    "crackdect",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6.0",
    "black>=24.4.0",
]

[project.scripts]
shift_correction = "deladect.cli.shift_correction:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
